objects/BMCServiceDesk__CustomAttachment__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__AttachmentId__c</fullName>
        <label>Attachment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__fileName__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__parentId__c</fullName>
        <label>Parent ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__parentName__c</fullName>
        <label>Parent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__parentType__c</fullName>
        <label>Parent Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Url</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>